<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Interval+</string>
    <string name="crash_toast_text">Interval+ has crashed :( !!! Please help us by sending a report :)</string>
    <string name="start">Start</string>
    <string name="save_plan">Save Plan</string>
    <string name="new_plan">New Plan</string>
    <string name="new_interval">New Interval</string>
    <string name="save_settings">Save Settings</string>
    <string name="no_plans">No saved plans yet!</string>
    <string name="no_runs">No saved runs yet!</string>
    <string name="fastest">fastest</string>
    <string name="select">select</string>
    <string name="close">Close</string>
    <string name="map">Map</string>
    <string name="dialog_error">Name must be between 1 and 20 characters</string>
    <string name="settings_error">Lengths must be up to 20 characters</string>
    <string name="zero_time">00 : 00 : 00</string>
    <string name="text_avg_pace">Pace avg: 0m 0s / km</string>
    <string name="text_pace">Pace: 0m 0s / km</string>
    <string name="adId1">ca-app-pub-1164456313108704/9576922674</string>
    <string name="adId2">ca-app-pub-1164456313108704/6586430278</string>
    <string name="seconds">Rest secs</string>
    <string name="rounds">Rounds</string>
    <string name="start_rest_secs">Start rest</string>
    <string name="distance">Distance</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="description">Enter Plan Name</string>
    <string name="description_run">Enter Run Description</string>
    <string name="plans">Plans</string>
    <string name="settings">Settings</string>
    <string name="diary">Diary</string>
    <string name="run">Run</string>
    <string name="share">Share</string>
    <string name="contact">Send feedback</string>
    <string name="shareTitle">Share app using</string>
    <string name="soon">Soon available!</string>
    <string name="login">Login</string>
    <string name="duration">Duration</string>
    <string name="icons8"><a href="https://icons8.com/register/?key=Qdg6">Icons powered by Icons8</a></string>
    <string name="facebook_page">https://www.facebook.com/intervalPlus0/</string>

    <string name="running_collection_mongo_path">/api/1/databases/auction/collections/intervalRun</string>
    <string name="interval_collection_mongo_path">/api/1/databases/auction/collections/intervalSession</string>

    <string name="runner_url">https://api.mongolab.com/api/1/databases/auction/collections/runner?apiKey=fft3Q2J8bB2l-meOoBHZK_z3E_b5cuBz</string>
    <string name="apiKey">fft3Q2J8bB2l-meOoBHZK_z3E_b5cuBz</string>
    <string name="auth_url">api.mongolab.com</string>
    <string name="runner_path">/api/1/databases/auction/collections/runner/</string>
    <string name="runnerCollection">https://api.mongolab.com/api/1/databases/auction/collections/runner/</string>

    <string name="friends">Friends</string>



</resources>
