<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <com.kostas.custom.NumberPickerKostas
            android:layout_alignParentTop="true"
            app:minValue="100"
            app:maxValue="5000"
            app:step="50"
            app:textName="@string/distance"
            android:layout_gravity="center_horizontal"
            android:id="@+id/intervalDistancePicker"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/eight"
            android:layout_height="@dimen/standard_view_height">
    </com.kostas.custom.NumberPickerKostas>

    <com.kostas.custom.NumberPickerKostas
            android:layout_below="@+id/intervalDistancePicker"
            app:minValue="10"
            app:maxValue="300"
            app:step="5"
            app:textName="@string/seconds"
            android:layout_centerHorizontal="true"
            android:id="@+id/intervalTimePicker"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/eight"
            android:layout_height="@dimen/standard_view_height">
    </com.kostas.custom.NumberPickerKostas>

    <com.kostas.custom.NumberPickerKostas
            android:layout_marginBottom="@dimen/eight"
            android:layout_below="@+id/intervalTimePicker"
            app:minValue="10"
            app:maxValue="120"
            app:step="5"
            app:textName="@string/start_rest_secs"
            android:layout_centerHorizontal="true"
            android:id="@+id/intervalStartRestPicker"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_view_height">
    </com.kostas.custom.NumberPickerKostas>

    <com.kostas.custom.NumberPickerKostas
            android:layout_marginBottom="@dimen/eight"
            android:layout_below="@+id/intervalStartRestPicker"
            app:minValue="0"
            app:maxValue="99"
            app:step="1"
            app:textName="@string/rounds"
            android:layout_centerHorizontal="true"
            android:id="@+id/intervalRoundsPicker"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_view_height">
    </com.kostas.custom.NumberPickerKostas>

</RelativeLayout>