<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/primary_grey"
        >

    <RelativeLayout
            android:padding="@dimen/eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <com.kostas.custom.NumberPickerKostas
                android:layout_alignParentTop="true"
                app:minValue="100"
                app:maxValue="5000"
                app:step="50"
                app:textName="@string/distance"
                android:layout_gravity="center_horizontal"
                android:id="@+id/intervalDistancePicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/eight"
                android:layout_height="@dimen/standard_view_height">
        </com.kostas.custom.NumberPickerKostas>

        <com.kostas.custom.NumberPickerKostas
                android:layout_below="@+id/intervalDistancePicker"
                app:minValue="10"
                app:maxValue="300"
                app:step="5"
                app:textName="@string/seconds"
                android:layout_centerHorizontal="true"
                android:id="@+id/intervalTimePicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/eight"
                android:layout_height="@dimen/standard_view_height">
        </com.kostas.custom.NumberPickerKostas>

        <com.kostas.custom.NumberPickerKostas
                android:layout_marginBottom="@dimen/eight"
                android:layout_below="@+id/intervalTimePicker"
                app:minValue="10"
                app:maxValue="120"
                app:step="5"
                app:textName="@string/start_rest_secs"
                android:layout_centerHorizontal="true"
                android:id="@+id/intervalStartRestPicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_view_height">
        </com.kostas.custom.NumberPickerKostas>

        <com.kostas.custom.NumberPickerKostas
                android:layout_marginBottom="@dimen/eight"
                android:layout_below="@+id/intervalStartRestPicker"
                app:minValue="0"
                app:maxValue="99"
                app:step="1"
                app:textName="@string/rounds"
                android:layout_centerHorizontal="true"
                android:id="@+id/intervalRoundsPicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_view_height">
        </com.kostas.custom.NumberPickerKostas>

        <Spinner
                android:layout_below="@+id/intervalRoundsPicker"
                android:id="@+id/plansSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_view_height"
                android:drawSelectorOnTop="true"
                android:layout_marginBottom="@dimen/twenty"
                style="@style/spinner_style"
                />

        <LinearLayout android:layout_width="match_parent" android:layout_below="@+id/plansSpinner"
                      android:layout_height="@dimen/standard_view_height">

            <CheckBox android:gravity="center" android:paddingLeft="@dimen/margin10" android:paddingRight="@dimen/zero"
                      android:layout_weight="1" android:layout_marginRight="@dimen/eight"
                      android:background="@drawable/checkbox_selector" android:button="@drawable/checkbox_sound_design"
                      android:textColor="@color/white_back" android:id="@+id/checkbox_sound" android:layout_width="@dimen/zero"
                      android:layout_height="fill_parent" android:text="@string/sound"/>

            <CheckBox android:gravity="center" android:paddingLeft="@dimen/margin10" android:layout_weight="1"
                      android:background="@drawable/checkbox_selector"
                      android:button="@drawable/checkbox_vibrate_design" android:textColor="@color/white_back"
                      android:id="@+id/checkbox_vibration" android:layout_width="@dimen/zero"
                      android:layout_height="fill_parent" android:text="@string/vibrate"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adViewInterval"
                app:adSize="BANNER"
                app:adUnitId="@string/adId1"
                android:layout_above="@+id/myAddressText"
                />

        <TextView
                android:id="@+id/myAddressText"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_above="@+id/buttonSetIntervalValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white_back"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/margin10"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button style="@style/buttonStyle"
                  android:text="@string/start"
                    android:background="@drawable/close_button_selector"
                    android:id="@+id/buttonSetIntervalValues"
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_marginBottom="@dimen/twenty"
                    />
    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
            >

        <ListView android:id="@+id/completedIntervals"
                  android:layout_alignParentTop="true"
                  android:layout_above="@+id/adViewInterval2"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/eight"
                  android:visibility="gone"/>

        <com.kostas.custom.ProgressWheel
                android:id="@+id/timerProgressWheel"
                android:layout_width="@dimen/progressBarSize"
                android:layout_height="@dimen/progressBarSize"
                android:visibility="invisible"
                app:textSize="@dimen/medium_text"
                android:layout_centerInParent="true"
                app:textColor="@color/interval_green"
                app:rimColor="@color/white_back"
                app:barColor="@color/interval_red"
                app:contourColor="@color/secondary_grey"
                app:barWidth="16dp"
                app:rimWidth="@dimen/twenty"
                />

        <ImageButton
                android:layout_margin="15dp"
                android:layout_width="@dimen/progressBarSize"
                android:layout_height="@dimen/progressBarSize"
                android:src="@drawable/replay"
                android:background="@drawable/circle_green"
                android:id="@+id/buttonStart"
                android:layout_centerInParent="true"/>

            <LinearLayout android:layout_below="@+id/buttonStart" android:id="@+id/textsInfoRun"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="@dimen/zero"
                          android:layout_marginRight="@dimen/margin10"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textSize="@dimen/xlarge_text"
                          android:textColor="@color/white_back"
                          android:textStyle="bold"
                          android:id="@+id/roundsText"
                          android:text="@string/text_rounds"
                          android:background="@drawable/rounds_back"
                        />


                <TextView android:layout_width="@dimen/zero"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textSize="@dimen/xlarge_text"
                          android:textColor="@color/white_back"
                          android:textStyle="bold"
                          android:id="@+id/timeText"
                          android:text="@string/text_time"
                          android:background="@drawable/time_back"
                        />

            </LinearLayout>

        <ImageButton

                android:layout_below="@+id/textsInfoRun"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_marginBottom="@dimen/four_dp"
                android:layout_width="@dimen/circular_image_size"
                android:visibility="invisible"
                android:layout_height="@dimen/circular_image_size"
                android:src="@drawable/stop_32"
                android:background="@drawable/circle_red"
                android:id="@+id/buttonStop"
                android:layout_centerHorizontal="true"/>

        <ImageButton
                android:layout_below="@+id/textsInfoRun"
                android:layout_marginTop="@dimen/four_dp"
                android:layout_marginBottom="@dimen/four_dp"
                android:layout_width="@dimen/circular_image_size"
                android:layout_height="@dimen/circular_image_size"
                android:src="@drawable/return_32"
                android:background="@drawable/circle_red"
                android:id="@+id/buttonBack"
                android:layout_centerHorizontal="true"/>

        <com.google.android.gms.ads.AdView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adViewInterval2"
                app:adSize="BANNER"
                app:adUnitId="@string/adId2"
                android:layout_gravity="center_horizontal|bottom"
                android:visibility="invisible"
                android:layout_above="@+id/layoutBottomButtons"

                />

        <LinearLayout android:baselineAligned="false" android:layout_alignParentBottom="true"
                      android:orientation="horizontal" android:visibility="gone" android:id="@+id/layoutBottomButtons"
                      android:layout_gravity="center_horizontal|bottom" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:padding="@dimen/eight">

            <Button android:text="@string/delete" android:layout_marginRight="@dimen/four_dp"
                    android:textColor="@color/white_back" android:textStyle="bold"
                    android:id="@+id/buttonDismissInterval" android:background="@drawable/close_button_selector"
                    android:layout_weight="1" android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/standard_view_height"/>
            <Button android:text="@string/save" android:textColor="@color/white_back" android:textStyle="bold"
                    android:id="@+id/buttonSaveRunWithIntervals" android:background="@drawable/plus_minus_selector"
                    android:layout_weight="1" android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/standard_view_height"/>
        </LinearLayout>
    </RelativeLayout>
</ViewFlipper>

