<?xml version="1.0" encoding="utf-8"?>

    <ViewFlipper
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/viewFlipperIntervals"
            android:layout_above="@+id/buttonNewRun"
            android:background="@color/primary_grey"
            >

    <LinearLayout  android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="fill_parent">

        <ListView
                android:id="@+id/listIntervals"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="4"
                />

    <LinearLayout  android:orientation="horizontal"
                   android:layout_width="fill_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1">

        <Button style="@style/buttonStyle2"
                android:layout_weight="1"
                android:text="@string/share"
                android:background="@drawable/share_button_selector"
                android:id="@+id/buttonShareFriends"/>

        <Button style="@style/buttonStyle2"
                android:text="@string/map"
                android:layout_weight="1"
                android:id="@+id/buttonShowMap"
                android:background="@drawable/plus_minus_selector"
               />

        <Button style="@style/buttonStyle2"
                android:layout_weight="1"
                android:text="@string/close"
                android:id="@+id/buttonCloseIntervals"
                android:background="@drawable/close_button_selector"/>

        </LinearLayout>

    </LinearLayout>


    <com.kostas.custom.MapWrapperLayout
            android:id="@+id/mapWrapperRuns"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <fragment
                    android:id="@+id/mapListKostas"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <ImageButton
                    android:layout_margin="15dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/close"
                    android:background="@drawable/circle_red"
                    android:focusable="false"
                    android:id="@+id/buttonCloseMap"
                    android:layout_gravity="left|bottom" />

        </FrameLayout>

    </com.kostas.custom.MapWrapperLayout>

</ViewFlipper>